syntax = "proto3";

service ClientApplication {
  rpc GetPollutionLevel (PollutionRequest) returns (PollutionData) {}
}

message PollutionRequest {
  string location = 1;
}

message PollutionData {
  float pollution_level = 1;
  string location = 2;
}
